# saga-orchestrator-pattern

./: .dockerignore  .env.example  LICENSE  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml
docs/: API.md  DATABASE.md  LOCAL_SETUP.md  OBSERVABILITY.md
docs/architecture/: SAGA_ORCHESTRATOR.md
mock_env/: Dockerfile  main.py
monitoring/grafana/provisioning/dashboards/: saga_dashboard.json
monitoring/prometheus/: prometheus.yml
nginx/: Dockerfile  nginx.conf
src/: Dockerfile  main.py
src/api/: dependencies.py  middleware.py
src/api/endpoints/: __init__.py  order.py  user.py
src/core/: database.py  exceptions.py  logging.py  seed.py  settings.py
src/db/migrations/: env.py
src/db/migrations/versions/: 070b554fc230_delete_price_column_from_order_table.py  a0135918af04_change_email_to_neccessary_in_shipping_.py  b27cbb9450a4_add_enum_for_order_global_status.py  b8039d07a1ed_init_orders_and_saga_tables.py  c940bd637eda_remove_saga_log_table.py  d5a5091fa9ae_initial_migration.py
src/db/models/: __init__.py  enums.py  good.py  order.py  order_shipping_detail.py  refresh_token.py  saga_log.py  types.py  user.py
src/db/repositories/: __init__.py  good.py  order.py  refresh_token.py  user.py
src/schemas/: auth.py  order.py
src/services/: good.py  notifications.py  order.py  user.py
src/utils/: jwt.py
src/workers/: lifecycle.py  main_worker.py  metrics.py  scheduler.py
src/workers/saga_tasks/: billing.py  compensation.py  inventory.py  logistics.py
tests/: conftest.py  test_saga_happy_path.py
tests/integration/api/: test_order.py  test_user.py
tests/integration/repositories/: test_order.py
tests/integration/services/: test_order.py  test_user.py
tests/integration/workers/: test_saga.py  test_scheduler.py
tests/unit/api/: test_dependencies.py
tests/unit/schemas/: test_auth.py  test_order.py
tests/unit/services/: test_notifications.py
tests/unit/utils/: test_security.py
